# Human-slice-scripts

./: .gitignore  FENS_poster.ipynb  OP220615_diff_freq_file_indices.json  README.md  Untitled-1.py  Untitled.ipynb  add_spontaneous_QC.py  add_times_after_op.py  age_dependencies.ipynb  analyse_connections_main.py  analyse_high_K_condition.py  analysis_oxitocin.ipynb  ap_kinetics.py  check_results_manually.ipynb  collect_data_tables_from_folders.py  connection_different_freqs.py  connection_parameters.py  connectivity_estimation.py  count_connections_temp.py  detect_peaks.py  events_analysis_funcs.py  events_post_analysis  events_post_analysis_funcs.py  events_post_analysis_main.py  fast_vc_analysis.py  fine_screen_diff_freq_functions.py  funcs_check_results_man_miniML.py  funcs_con_screen.py  funcs_events_post_analysis.py  funcs_for_results_tables.py  funcs_human_characterisation.py  funcs_plot_intrinsic_props.py  funcs_plotting.py  funcs_post_mini_ML_analysis.ipynb  funcs_sorting.py  get_resting_potential.py  high_K_tests_find_peaks.ipynb  human-slice-scripts.toml  human_characterisation_functions.py  human_characterization_main.py  (+36 more)
.ipynb_checkpoints/: age_dependencies-checkpoint.ipynb  manual_fix_notebook_and_some_useful_plots-checkpoint.ipynb  poster_plots-checkpoint.ipynb  solution to the scheduling problem-checkpoint.ipynb  solution_scheduling_problem-checkpoint.ipynb
not_used/: HumanSliceFigures-spontaneous_activity_in_repatched_neurons.ipynb  calculate_time_affter_op.py  collect_filename_data_rosie.py  human_characterisation_functions_old_protocols.py  (+2 more)
(+55 files in other folders)
